Changes to navbar, fixed some alignments

--- a/hackathon_v2.css
+++ b/hackathon_v2.css
@@ -1,7 +1,6 @@
 html,
 body,
-.slide,
-.bg {
+.slide {
     margin: 0;
     width: 100%;
     height: 100%;
@@ -14,7 +13,7 @@ body,
 a.anchor {
     display: block;
     position: relative;
-    top: -17vh;
+    top: -23vh;
     visibility: hidden;
 }
 
@@ -23,20 +22,56 @@ a.anchor {
 }
 
 #register {
-    top: -55vh;
+    top: -35vh;
+}
+
+#gallery {
+    top: -15vh;
 }
 /* End of anchors */
 
+/* Navbar */
 nav {
-    height: 8vh;
+    height: 14vh;
     background-color: #e6f5fd;
     font-size: 2vh;
 }
-
-#navbarLinks {
-    padding-right: 5vw;
+#navbarLogoWrapper {
+    width: 100%;
+    /*border-bottom: 1px solid black;*/
+    /*box-shadow: 2px 24px 10px -24px black;*/
 }
 
+#lineDiv {
+    margin: 0 auto 0;
+    width: 80vw;
+    border-bottom: 1px solid black;
+}
+
+#navbarHacText {
+    font-size: 2vw;
+}
+
+#navBarLogo {
+    max-height: 10vw;
+    height: 100%;
+    width: 50%;
+    padding-right: 2vw;
+}
+
+#navbarLinks {
+    margin: 0 auto 0;
+    width: 80vw;
+    text-align: center;
+    border-top: 1px solid black;
+}
+
+.navbar-brand {
+    font-size: 2vh;
+    font-weight: bold;
+}
+
+/* General */
 h1 {
     text-align: center;
     font-size: 2vw;
@@ -45,27 +80,23 @@ h1 {
 
 .contentWrapper {
     width: 80vw;
-    height: 90vh;
+    height: 84vh;
     z-index: 10;
     background-color: white;
     border-radius: 1vh;
-    margin: 9vh auto 0;
-}
-
-#navBarLogo {
-    max-height: 6vh;
-    width: 20vw;
-    padding-left: 5vw;
+    margin: 1vh auto 0;
 }
 
 .customBold {
-    font-family: 'Montserrat Alternates';
     font-weight: bold;
 }
 
 .customBold.big {
     font-size: 3vw;
     color: #ff7900;
+}
+.customBold.big.hackathon {
+    font-family: 'Montserrat Alternates';
 }
 
 .customBold.medium {
@@ -74,11 +105,15 @@ h1 {
 }
 
 .customBold.small {
-    font-size: 1.1vw;
+    font-size: 1.2vw;
     color: #00497B;
 }
 
 /* 1st page - welcome */
+#welcomeContentWrapper {
+    margin: 15vh auto 0;
+}
+
 #welcomeHeader {
     text-align: left;
 }
@@ -92,7 +127,7 @@ h1 {
 
 .logoImg {
     width: 100%;
-    height: 90vh;
+    height: 84vh;
     border-radius: 1vh;
 }
 
@@ -103,6 +138,15 @@ h1 {
 /* 2nd page - why */
 
 /* 3rd page - register */
+#registrationSlide {
+    height: 70vh;
+}
+
+#formContentWrapper, #formWrapper, #videoWrapper{
+    height: 100%;
+}
+
+
 #nameInput, #emailInput, #phoneNumberInput, #teamNameInput,
 .contentWrapper.topic {
     background-color: #e6f5fd;
@@ -111,6 +155,9 @@ h1 {
 .registerButton {
     background-color: #ff7900;
     color: white;
+    font-size: 1vw;
+    width: 10vw;
+    height: 2.5vw;
 }
 
 .registerButton:hover {
@@ -118,9 +165,7 @@ h1 {
 }
 
 .registerButton.redirect {
-    width: 8vw;
-    height: 2.5vw;
-    margin-left: 0.5vw;
+    margin-left: 1vw;
 }
 
 #teamNameInputWrapper {
@@ -129,8 +174,9 @@ h1 {
 
 #youtubeFrame {
     width: 80%;
-    height: 40%;
+    height: 50%;
 }
+
 /* 4th page - gallery */
 #gallerySlideWrapper, #programContentWrapper, #programContent2Wrapper {
     background-color: #e7f5fd;
@@ -213,6 +259,21 @@ h1 {
 }
 
 /* 7,8th page - program 1,2 */
+.programHead {
+    font-weight: bold;
+    color: black;
+}
+.programHead.day {
+    font-size: 2vw;
+}
+.programHead.date {
+    font-size: 1.5vw;
+}
+
+#programHeadRow {
+    height: 10px;
+}
+
 .programTable {
     text-align: left;
 }
@@ -226,7 +287,8 @@ table td:last-child {
 }
 
 .programTable td {
-    padding-bottom: 5vh;
+    padding-bottom: 2.5vh;
+    padding-top: 2.5vh;
 }
 
 /* 9th page - evaluation */
@@ -240,19 +302,10 @@ table td:last-child {
 }
 
 /* 10, 11, 12th page - topic 1,2,3 */
-#topic1Slide .bg h1 {
-    margin-top: 9vh;
-    padding-bottom: 0;
-}
-#topic1Slide .bg .contentWrapper {
-    height: 72vh;
-}
-#topic1Slide .bg .contentWrapper .col .topicImg {
-    height: 72vh;
-}
+
 
 .topicImg {
-    height: 90vh;
+    height: 84vh;
     max-width: 100%;
     border-radius: 1vh;
 }
